refactor: Arrays.asList (modifiable) to List.of (unmodifiable)