@@ -22,7 +22,7 @@ public class ResourceReader {
     public static List<List<String>> readFileToLoLoS(String path) throws IOException {
         return Arrays.stream(FileUtils.readFileToString(ResourceUtils.getFile(path), StandardCharsets.UTF_8)
                         .split("\n\n"))
-                .map(chunk -> Arrays.asList(chunk.split("\n")))
+                .map(chunk -> List.of(chunk.split("\n")))
                 .toList();
     }
 
